CR-2004-02-11-0: Cleanup:   Fixed message macro name in qsub

JG-2004-02-11-1: Cleanup:   Cleanup and enhancement of error messages in case of
                            spooling errors.
                 Review:    pending

DT-2004-02-11-0: Bugfix:    Fixed aimk -help output.
                            Made the -secure transition more user friendly.
                 Changed:   aimk

CR-2004-02-11-0: Testsuite: Testsuite will not use -secure switch for aimk. This
                            switch is not supported by aimk anymore.

JG-2004-02-11-0: Testsuite: performance/throughput was broken for SGE 5.3.
                            Fixed bugs/issuezilla/126, bugs/issuezilla/140, 
                            bugs/issuezilla/141, bugs/issuezilla/171, 
                            bugs/issuezilla/193

SD-2004-02-10-1: Enhancem:  Added automatic user fields to qmon cluster
                            configuration
                 Changed:   qmon
                 Issue:     636

MD-2004-02-10-0: Bugfix:    -fixed some typos
                            -fixed local execd spool dir support
                            -added local execd spool dir support (auto mode)
                            -adapted testsuite
                            -help text
                 Changed:   inst_sgeee testsuite

SG-2004-02-10-0: Bugfix:    fixed memory leak in scheduler
                 Changed:   scheduler
                 Review:    CR

AD-2004-02-10-0: Enhancem:  Did add wrapper functions for POSIX read-write
                            locks.
                 Changed:   lck

JG-2004-02-10-0: Testsuite: Fixed install re_init.
                            Allow tests that are only valid for a certain 
                            Grid Engine version.
                            Cleanup functional/access_lists.
                            Fixed setup and cleanup of performance/throughput.
                            Fixed set_queue for cluster queues.
