@@ -92,7 +92,7 @@ global CHECK_PACKAGE_TYPE             ;# zip or tar
 set CHECK_PACKAGE_TYPE "tar"
 global CHECK_QMASTER_INSTALL_OPTIONS  ;# optional: qmaster install parameter
 global CHECK_EXECD_INSTALL_OPTIONS    ;# optional: execd install parameter 
-set CHECK_AIMK_COMPILE_OPTIONS "-secure"
+set CHECK_AIMK_COMPILE_OPTIONS ""
 set CHECK_DIST_INSTALL_OPTIONS "-allall"
 set CHECK_PACKAGE_DIRECTORY "none"
 set CHECK_QMASTER_INSTALL_OPTIONS ""
@@ -3207,7 +3207,7 @@ proc delete_tests {path { only_if_not_there 0 } } {
 proc run_tests { path runcompleted } {
     global CHECK_DIRECTORIES CHECK_OUTPUT CHECK_HOST check_errstr CHECK_RESULT_DIR
     global CHECK_MAILS_SENT CHECK_ENABLE_MAIL CHECK_MAX_ERROR_MAILS CHECK_CORE_RESULT_DIR
-    global CHECK_CHECKTREE_ROOT CHECK_ACT_PATH check_use_installed_system
+    global CHECK_CHECKTREE_ROOT CHECK_ACT_PATH check_use_installed_system ts_config
     global check_reinit_on_tcl_error CHECK_CORE_MASTER CHECK_PRODUCT_ROOT CHECK_ARCH
 
     set CHECK_DIRECTORIES ""
@@ -3332,8 +3332,7 @@ proc run_tests { path runcompleted } {
                             if { $check_reinit_on_tcl_error == 1 } {
                                # reinit system
                                puts $CHECK_OUTPUT "deleting all jobs"
-                               catch {  eval exec "$CHECK_PRODUCT_ROOT/bin/$CHECK_ARCH/qdel" "-uall" } catch_result
-                               puts $CHECK_OUTPUT $catch_result
+                               delete_all_jobs
                                wait_for_end_of_all_jobs 60
 
                                set save_installed_value $check_use_installed_system
@@ -3368,8 +3367,7 @@ proc run_tests { path runcompleted } {
                                # reinit system
                                # reinit system
                                puts $CHECK_OUTPUT "deleting all jobs"
-                               catch {  eval exec "$CHECK_PRODUCT_ROOT/bin/$CHECK_ARCH/qdel" "-uall" } catch_result
-                               puts $CHECK_OUTPUT $catch_result
+                               delete_all_jobs
                                wait_for_end_of_all_jobs 60
 
                                set save_installed_value $check_use_installed_system
@@ -5978,10 +5976,6 @@ proc compile_source { { do_only_install 0 } } {
 
 
    set my_compile_options $CHECK_AIMK_COMPILE_OPTIONS
-   if { [ string compare "csp" $ts_config(product_feature) ] == 0 } {
-      append my_compile_options " -secure"
-      puts $CHECK_OUTPUT "-> adding compile option -csp"
-   }
    puts $CHECK_OUTPUT "-> starting aimk -only-depend on host $depend_host_name ..."
    set output [ start_remote_prog $depend_host_name $CHECK_USER "cd" "$CHECK_SOURCE_DIR ; ./aimk -only-depend" prg_exit_state 60 0 "" 1 0 ]
    puts $CHECK_OUTPUT "------------------------------------------"
