@@ -84,6 +84,7 @@ proc sge_macro { macro_name } {
       "MSG_OBJ_SHARETREE" -
       "MSG_SGETEXT_REMOVEDLIST_SSS" -
       "MSG_JOB_SUBMITJOB_USS" -
+      "MSG_QSUB_YOURJOBHASBEENSUBMITTED_SS" -
       "MSG_QSUB_YOURQSUBREQUESTCOULDNOTBESCHEDULEDDTRYLATER" -
       "MSG_QSUB_YOURIMMEDIATEJOBXHASBEENSUCCESSFULLYSCHEDULED_U" -
       "MSG_SGETEXT_MOD_JOBS_SU" -
